✨ Adds Discord notification checkbox
Adds a checkbox to the bug report form that allows users to opt-out of sending a notification to Discord when submitting a bug report.

- Allows users to control Discord notifications for bug reports
- Defaults to sending notifications

--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -50,3 +50,13 @@ body:
         - Wallet:
     validations:
       required: false
+
+  - type: checkboxes
+    id: notify_discord
+    attributes:
+      label: Notify Discord
+      description: Uncheck if this bug shouldn't ping Discord.
+      options:
+        - label: Send to Discord
+          default: true
+          required: false
