🐛 Fixes issue type detection in templates
Updates issue templates and workflow to use "=" instead of ":" for issue type detection.

This change ensures that the issue type is correctly identified by the workflow.

- Updates issue templates to use "=" for issue-type
- Updates workflow to use "=" when checking issue-type in issue body

--- a/.github/ISSUE_TEMPLATE/story.yml
+++ b/.github/ISSUE_TEMPLATE/story.yml
@@ -7,7 +7,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        <!-- issue-type: story -->
+        <!-- issue-type=story -->
 
         Keep it lightweight: describe the problem, the outcome, and how we'll confirm it delivers value.
 
