--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -7,7 +7,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        <!-- issue-type: bug -->
+        <!-- issue-type=bug -->
 
         Thanks for raising an issue. Share the essentials so we can reproduce and fix it quickly.
 
