⬆️ Improves Discord notification selection
Updates the bug report template for better Discord notification control:

- Replaces checkboxes with a dropdown menu for clarity.
- Enhances description of Discord notification options.
- Simplifies the selection process for users submitting bug reports.

--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -51,12 +51,12 @@ body:
     validations:
       required: false
 
-  - type: checkboxes
+  - type: dropdown
     id: notify_discord
     attributes:
       label: Notify Discord
-      description: Uncheck if this bug shouldn't ping Discord.
+      description: Choose whether this bug should be sent to Discord.
       options:
-        - label: Send to Discord
-          default: true
-          required: false
+        - Send to Discord
+        - Skip Discord
+      default: Send to Discord
