--- a/.github/workflows/issue-bug-to-discord.yml
+++ b/.github/workflows/issue-bug-to-discord.yml
@@ -8,8 +8,12 @@ jobs:
   notify_discord:
     runs-on: ubuntu-latest
 
-    # Only run for issues whose hidden marker is "issue-type: bug"
-    if: ${{ contains(github.event.issue.body, 'issue-type=bug') }}
+    # Only run for bug issues and when the form didn't opt out of Discord
+    if: >
+      ${{
+        contains(github.event.issue.body, 'issue-type=bug') &&
+        !contains(github.event.issue.body, 'Skip Discord')
+      }}
 
     steps:
       - name: Send Discord notification
