--- a/.github/ISSUE_TEMPLATE/task.yml
+++ b/.github/ISSUE_TEMPLATE/task.yml
@@ -1,39 +1,61 @@
-name: Task
-description: Track a general engineering or operational task.
-type: "Task"
-projects: ["1Hive/17"]
+name: Bug
+description: Report a problem or unexpected behavior in the Gardens app.
+labels: ["triage"]
+type: bug
+projects: ["1Hive/20", "1Hive/17"]
 body:
   - type: markdown
     attributes:
       value: |
-        <!-- issue-type=task -->
+        <!-- issue-type=bug -->
 
-        Capture the goal, the work needed, and how you'll know it's done.
+        Thanks for raising an issue. Share the essentials so we can reproduce and fix it quickly.
 
   - type: textarea
-    id: outcome
+    id: steps
     attributes:
-      label: Desired outcome
-      description: What does success look like?
-      placeholder: When complete...
+      label: Steps to reproduce
+      description: List the actions that trigger the bug.
+      placeholder: |
+        1. Go to ...
+        2. Click ...
+        3. Observe ...
     validations:
       required: true
 
   - type: textarea
-    id: plan
+    id: expected
     attributes:
-      label: Key steps
-      description: Outline the main actions or checklist items.
+      label: Expected result
+      description: What did you expect to happen?
+    validations:
+      required: true
+
+  - type: textarea
+    id: actual
+    attributes:
+      label: Actual result
+      description: What happened instead? Include errors or screenshots if helpful.
+    validations:
+      required: true
+
+  - type: textarea
+    id: context
+    attributes:
+      label: Extra context
+      description: Environment details, wallets, links, or anything else that helps.
       placeholder: |
-        - [ ] Step 1
-        - [ ] Step 2
+        - Network:
+        - Browser or device:
+        - Wallet:
     validations:
       required: false
 
-  - type: textarea
-    id: resources
+  - type: checkboxes
+    id: skip_discord
     attributes:
-      label: Links or context
-      description: Add references, related issues, or notes.
-    validations:
-      required: false
+      label: Skip Discord notification
+      description: Check this if you do NOT want this bug to be reported to Discord.
+      options:
+        - label: Skip notify Discord
+          required: false
