--- a/.github/ISSUE_TEMPLATE/task.yml
+++ b/.github/ISSUE_TEMPLATE/task.yml
@@ -1,52 +1,39 @@
-name: Bug
-description: Report a problem or unexpected behavior in the Gardens app.
-labels: ["triage"]
-type: bug
-projects: ["1Hive/20", "1Hive/17"]
+name: Task
+description: Track a general engineering or operational task.
+type: "Task"
+projects: ["1Hive/17"]
 body:
   - type: markdown
     attributes:
       value: |
-        <!-- issue-type=bug -->
+        <!-- issue-type: task -->
 
-        Thanks for raising an issue. Share the essentials so we can reproduce and fix it quickly.
+        Capture the goal, the work needed, and how you'll know it's done.
 
   - type: textarea
-    id: steps
+    id: outcome
     attributes:
-      label: Steps to reproduce
-      description: List the actions that trigger the bug.
+      label: Desired outcome
+      description: What does success look like?
+      placeholder: When complete...
+    validations:
+      required: true
+
+  - type: textarea
+    id: plan
+    attributes:
+      label: Key steps
+      description: Outline the main actions or checklist items.
       placeholder: |
-        1. Go to ...
-        2. Click ...
-        3. Observe ...
+        - [ ] Step 1
+        - [ ] Step 2
     validations:
-      required: true
+      required: false
 
   - type: textarea
-    id: expected
+    id: resources
     attributes:
-      label: Expected result
-      description: What did you expect to happen?
-    validations:
-      required: true
-
-  - type: textarea
-    id: actual
-    attributes:
-      label: Actual result
-      description: What happened instead? Include errors or screenshots if helpful.
-    validations:
-      required: true
-
-  - type: textarea
-    id: context
-    attributes:
-      label: Extra context
-      description: Environment details, wallets, links, or anything else that helps.
-      placeholder: |
-        - Network:
-        - Browser or device:
-        - Wallet:
+      label: Links or context
+      description: Add references, related issues, or notes.
     validations:
       required: false
