--- a/.github/workflows/issue-bug-to-discord.yml
+++ b/.github/workflows/issue-bug-to-discord.yml
@@ -8,12 +8,11 @@ jobs:
   notify_discord:
     runs-on: ubuntu-latest
 
-    # Only run for bug issues and when the form didn't opt out of Discord
-    if: >
-      ${{
-        contains(github.event.issue.body, 'issue-type=bug') &&
-        !contains(github.event.issue.body, 'Skip Discord')
-      }}
+    # Run only for Bug issues AND when Skip notify Discord is NOT checked
+    if: ${{ 
+      contains(github.event.issue.body, 'issue-type=bug') &&
+      !contains(github.event.issue.body, '- [x] Skip notify Discord')
+    }}
 
     steps:
       - name: Send Discord notification
@@ -26,11 +25,9 @@ jobs:
           ISSUE_USER: ${{ github.event.issue.user.login }}
           REPO_NAME: ${{ github.repository }}
         run: |
-          # Trim body to avoid huge messages
           SHORT_BODY=$(printf '%s' "$ISSUE_BODY" | head -c 400)
           [ -z "$SHORT_BODY" ] && SHORT_BODY="(no description)"
 
-          # Build JSON payload for Discord
           payload=$(jq -n \
             --arg username "GitHub Bot" \
             --arg content "" \
