✨ Improves bug issue workflow
- Simplifies the conditional check for Discord notifications on bug issues.
- Ensures the workflow triggers correctly based on the presence of steps to reproduce and the absence of the "Skip notify Discord" option.

--- a/.github/workflows/issue-bug-to-discord.yml
+++ b/.github/workflows/issue-bug-to-discord.yml
@@ -10,11 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     # Run only for Bug-form issues AND when "Skip notify Discord" is NOT checked
-    if: ${{ 
-      contains(github.event.issue.body, '### Steps to reproduce') &&
-      !contains(github.event.issue.body, '- [x] Skip notify Discord') &&
-      !contains(github.event.issue.body, '- [X] Skip notify Discord')
-    }}
+    if: ${{ contains(github.event.issue.body, '### Steps to reproduce') && !contains(github.event.issue.body, '- [x] Skip notify Discord') && !contains(github.event.issue.body, '- [X] Skip notify Discord') }}
 
     steps:
       - name: Send Discord notification
