--- a/.github/workflows/issue-bug-to-discord.yml
+++ b/.github/workflows/issue-bug-to-discord.yml
@@ -9,8 +9,17 @@ jobs:
   notify_discord:
     runs-on: ubuntu-latest
 
-    # Run only for Bug-form issues AND when "Skip notify Discord" is NOT checked
-    if: ${{ contains(github.event.issue.body, '### Steps to reproduce') && !contains(github.event.issue.body, '- [x] Skip notify Discord') && !contains(github.event.issue.body, '- [X] Skip notify Discord') }}
+    # Run only for Bug issues (typed/label/hidden marker) and when the form didn't opt out of Discord
+    if: >
+      ${{
+        (
+          (github.event.issue.issue_type && github.event.issue.issue_type.name == 'Bug') ||
+          contains(github.event.issue.labels.*.name, 'bug') ||
+          contains(github.event.issue.labels.*.name, 'Bug') ||
+          contains(github.event.issue.body, 'issue-type=bug')
+        )
+        && !contains(github.event.issue.body, 'Skip Discord')
+      }}
 
     steps:
       - name: Send Discord notification
@@ -32,7 +41,15 @@ jobs:
             --arg username "GitHub Bot" \
             --arg content "" \
             --arg title "🐞 New Bug issue in $REPO_NAME" \
-            --arg desc "**#${ISSUE_NUMBER} – $ISSUE_TITLE**\n**Author:** $ISSUE_USER\n**Link:** $ISSUE_URL\n\n**Description (truncated):**\n$SHORT_BODY" \
+            --arg desc "$(cat <<EOF
+          **#${ISSUE_NUMBER} – $ISSUE_TITLE**
+          **Author:** $ISSUE_USER
+          **Link:** $ISSUE_URL
+
+          **Description (truncated):**
+          $SHORT_BODY
+          EOF
+          )" \
             '{
               "username": $username,
               "content": $content,
@@ -42,7 +59,8 @@ jobs:
                   "description": $desc
                 }
               ]
-            }')
+            }'
+          )
 
           curl -X POST \
             -H "Content-Type: application/json" \
