chore: add Polygon diamond upgrade and deployment logs
- Add upgrade-diamond-polygon target to Makefile with verify flag
- Add Polygon deployment broadcast logs (chain 137)
- Add Safe Transaction Builder payload for Polygon diamond upgrade

--- a/pkg/contracts/Makefile
+++ b/pkg/contracts/Makefile
@@ -785,6 +785,19 @@ verify-blockscout-polygon:
 
 upgrade-and-verify-polygon: upgrade-polygon verify-blockscout-polygon
 
+upgrade-diamond-polygon:
+	-forge script script/UpgradeCVDiamond.s.sol:UpgradeCVDiamond \
+	--rpc-url $(RPC_URL_POLYGON) \
+	--sig "run(string)" 'polygon' \
+	--account pkGarden \
+	--etherscan-api-key $(POLYGONSCAN_API_KEY) \
+	--chain-id 137 \
+	--broadcast \
+	--legacy \
+	--verify \
+	--slow \
+	-vvv
+
 change-passport-manager-polygon: 
 	-forge script script/PassportScorerWriter.s.sol:PassportScorerWriter \
 	--rpc-url $(RPC_URL_POLYGON) \
