--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,9 +26,11 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
     "@mdxeditor/editor": "^3.49.2",
+    "@notionhq/client": "^5.4.0",
     "@pinata/sdk": "^2.1.0",
     "@rainbow-me/rainbowkit": "^1.3.3",
     "@sentry/nextjs": "^10",
+    "@stackso/js-core": "^0.5.11",
     "@superfluid-finance/metadata": "^1.6.0",
     "@tanstack/react-query": "^5.17.19",
     "@tenderly/sdk": "^0.3.0",
