--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -19,6 +19,10 @@
     {
       "path": "/api/passport-oracles/daily-job/421614",
       "schedule": "*/15 * * * *"
+    },
+    {
+      "path": "/api/superfluid-stack",
+      "schedule": "0 * * * *"
     }
   ]
 }
