⏰ Updates scheduled job frequency
Updates the frequency of a scheduled job.

*   Increases the job execution frequency to every 15 minutes.

--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -22,7 +22,7 @@
     },
     {
       "path": "/api/superfluid-stack",
-      "schedule": "0 * * * *"
+      "schedule": "*/15 * * * *"
     }
   ]
 }
