--- a/package.json
+++ b/package.json
@@ -28,6 +28,12 @@
   "packageManager": "pnpm@8.14.0",
   "pnpm": {
     "overrides": {
+      "axios": "1.13.2",
+      "@pinata/sdk>axios": "1.13.2",
+      "binary-install-raw>axios": "1.13.2",
+      "apisauce>axios": "1.13.2",
+      "@graphprotocol/graph-cli>axios": "1.13.2",
+      "axios@1.7.9": "npm:axios@1.13.2",
       "axios@>=0.8.1 <0.28.0": ">=0.28.0",
       "ejs@<3.1.10": ">=3.1.10",
       "ws@>=8.0.0 <8.17.1": ">=8.17.1",
@@ -51,6 +57,7 @@
       "pbkdf2@>=3.0.10 <=3.1.2": ">=3.1.3",
       "axios@<0.30.2": ">=0.30.2",
       "axios@>=1.0.0 <1.12.0": ">=1.12.0",
+      "axios@<1.12.0": ">=1.12.0",
       "tar-fs@<1.16.6": ">=1.16.6",
       "sha.js@<=2.4.11": ">=2.4.12",
       "cipher-base@<=1.0.4": ">=1.0.5",
@@ -63,6 +70,11 @@
       "elliptic@>=5.2.1 <=6.5.6": ">=6.5.7",
       "js-yaml@<3.14.2": ">=3.14.2",
       "js-yaml@>=4.0.0 <4.1.1": ">=4.1.1",
+      "glob": "11.1.0",
+      "node-gyp>glob": "11.1.0",
+      "rimraf>glob": "11.1.0",
+      "cacache>glob": "11.1.0",
+      "glob@11.0.3": "npm:glob@11.1.0",
       "glob@>=10.2.0 <10.5.0": ">=10.5.0",
       "glob@>=11.0.0 <11.1.0": ">=11.1.0",
       "node-forge@<1.3.2": ">=1.3.2",
