--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
       "cookie@<0.7.0": ">=0.7.0",
       "@babel/runtime@<7.26.10": ">=7.26.10",
       "@babel/helpers@<7.26.10": ">=7.26.10",
-      "base-x@<=3.0.10": ">=3.0.11",
       "undici@<5.29.0": ">=5.29.0",
       "cross-spawn@>=7.0.0 <7.0.5": ">=7.0.5",
       "brace-expansion@>=1.0.0 <=1.1.11": ">=1.1.12",
@@ -87,7 +86,8 @@
       "elliptic@<6.5.6": ">=6.5.6",
       "serialize-javascript@>=6.0.0 <6.0.2": ">=6.0.2",
       "mdast-util-to-hast@>=13.0.0 <13.2.1": ">=13.2.1",
-      "next@>=13.3.0 <14.2.34": ">=14.2.34"
+      "next@>=13.3.0 <14.2.34": ">=14.2.34",
+      "base-x": "3.0.9"
     }
   }
 }
