--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -91,6 +91,7 @@
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "node-gyp-build": "^4.8.4",
     "postcss": "^8.4.32",
     "prettier": "^3.1.0",
     "prettier-eslint": "^16.3.0",
