chore: stagger superfluid-stack-gd cron after main run

--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -23,6 +23,10 @@
     {
       "path": "/api/superfluid-stack",
       "schedule": "*/15 * * * *"
+    },
+    {
+      "path": "/api/superfluid-stack-gd",
+      "schedule": "5/15 * * * *"
     }
   ]
 }
