--- a/pkg/subgraph/subgraph.yaml
+++ b/pkg/subgraph/subgraph.yaml
@@ -6,15 +6,15 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: RegistryFactory
-    network: optimism-sepolia
+    network: arbitrum-one
     context:
       chainId: 
         type: Int
-        data: 11155420
+        data: 42161
     source:
-      address: "0xEC8824e9a9498520891ec678e98c5bd3e65229c2"
+      address: "0xc1c2e092b7dbc8413e1ac02e92c161b0bda783f6"
       abi: RegistryFactory
-      startBlock: 29036730
+      startBlock: 251465002
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -44,15 +44,15 @@ dataSources:
 
   - kind: ethereum/contract
     name: PassportScorer
-    network: optimism-sepolia
+    network: arbitrum-one
     context:
       chainId: 
         type: Int
-        data: 11155420
+        data: 42161
     source:
-      address: "0xe3DC6e82B599cD80904aCf0a3cd9f7401d92CC37"
+      address: "0x8cd4bA4ad10d85A550fe45d567a49E49e1D23CE1"
       abi: PassportScorer
-      startBlock: 29036730
+      startBlock: 251465002
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -81,15 +81,15 @@ dataSources:
 
   - kind: ethereum/contract
     name: GoodDollarSybil
-    network: optimism-sepolia
+    network: arbitrum-one
     context:
       chainId: 
         type: Int
-        data: 11155420
+        data: 42161
     source:
-      address: "0xb01AC9015E04ecC424E646eBAb32dfa7670Ae8a6"
+      address: "0x3015DC7D831D19786C726Ab1A49b30b31356f78D"
       abi: GoodDollarSybil
-      startBlock: 29036730
+      startBlock: 251465002
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -113,7 +113,7 @@ dataSources:
 templates:
   - kind: ethereum/contract
     name: RegistryCommunity
-    network: optimism-sepolia
+    network: arbitrum-one
     source:
       abi: RegistryCommunity
     mapping:
@@ -187,7 +187,7 @@ templates:
 
   - kind: ethereum/contract
     name: CVStrategy
-    network: optimism-sepolia
+    network: arbitrum-one
     source:
       abi: CVStrategy
     mapping:
@@ -254,7 +254,7 @@ templates:
 
   - kind: ethereum/contract
     name: CollateralVault
-    network: optimism-sepolia
+    network: arbitrum-one
     source:
       abi: CollateralVault
     mapping:
