--- a/pkg/e2e/package.json
+++ b/pkg/e2e/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "build-cache": "pnpm exec synpress wallet-setup --force",
+    "build-cache": "pnpm exec synpress wallet-setup",
     "test": "pnpm run build-cache && playwright test",
     "test:headed": "pnpm run build-cache && playwright test --headed",
     "test:ui": "playwright test --ui",
