--- a/pkg/subgraph/package.json
+++ b/pkg/subgraph/package.json
@@ -37,6 +37,7 @@
     "last-addr": "node src/scripts/last-addr.cjs",
     "proxies:test": "node src/scripts/list-proxies.cjs arbsepolia && node src/scripts/list-proxies.cjs opsepolia",
     "proxies:prod": "node src/scripts/list-proxies.cjs arbitrum && node src/scripts/list-proxies.cjs optimism && node src/scripts/list-proxies.cjs polygon && node src/scripts/list-proxies.cjs gnosis && node src/scripts/list-proxies.cjs base && node src/scripts/list-proxies.cjs celo",
+    "proxies": "pnpm proxies:test && pnpm proxies:prod",
     "build-client": "mustache ../../apps/web/configs/subgraph.json .graphclientrc.template.yml > .graphclientrc.yml && graphclient build --fileType js",
     "build-all": "pnpm create-local && pnpm build && pnpm deploy:local",
     "deploy:arbsep:last": "dotenvx run -- ts-node --esm -P ../../apps/web/tsconfig.json ./src/scripts/last-version.ts gv2-arbitrum-sepolia",
