✨  Ensures dependencies are installed on dev
- Adds dependency installation step to the development server startup.
- This guarantees that all project dependencies are installed before starting the dev server.

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "generate": "wagmi generate",
-    "dev": "next dev",
+    "dev": "pnpm install && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
