✨ Renames endpoint for clarity
- Updates a scheduled function path to better reflect its purpose.

--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -21,7 +21,7 @@
       "schedule": "*/15 * * * *"
     },
     {
-      "path": "/api/superfluid-stack",
+      "path": "/api/superfluid-points",
       "schedule": "*/15 * * * *"
     },
     {
