✨ Implements base strategy and CV strategy
This commit introduces critical base strategy and concrete conviction voting strategy components.

- Adds base strategy upgradeable contract with essential modifiers and checks, enhancing security and access control.
- Adds conviction voting strategy, integrates with superfluid, and provides comprehensive governance functionalities.
- Improves codebase modularity and extensibility.
- Adds essential tooling configuration.

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,9 @@ lcov.info
 # foundry build artifacts
 pkg/contracts/out/
 pkg/contracts/script/Playground.s.sol
+
+apps/web/.osmium/contracts.json
+
+apps/web/.osmium/environments.json
+
+apps/web/.osmium/wallets.json
